--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
         <h2>link keeperにログイン</h2>
         <form method="post">
                 <ul>
-                    <li><input type=text name=email  placeholder="Email" class="text"></li>
+                    <li><input type=text name=email  placeholder="email" class="text"></li>
                     <li><input type=password name=password placeholder="password" class="text"></li>
                 </ul>
             <div class="signin-button-div">
