--- a/templates/delete_folder.html
+++ b/templates/delete_folder.html
@@ -1,15 +1,14 @@
 {% extends "header.html" %}
 
+
 {% block content %}
 <div id="signin" class="signin-page wrapper">
     <img src="{{ url_for('static', filename='img/icon.svg') }}">
-    <div class="border"></div>
+    <div class="border"></div> 
     <div class="signin-page-form">
-        <h2>urlを保存</h2>
+        <h2>フォルダを削除</h2>
         <form method="post">
                 <ul>
-                    <li><input type=text name=url  placeholder="url" class="text"></li>
-                    <li><input type=text name=name  placeholder="name" class="text"></li>
                     <li>
                         <select name="folder">
                         {% for folder in folders %}
@@ -19,7 +18,7 @@
                     </li>
                 </ul>
             <div class="signin-button-div">
-                <input type="submit" value="Create" class="button">
+                <input type="submit" value="Delete" class="button">
             </div>
         </form>
     </div>
