--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/function.js') }}"></script>
     <style>
+        body {
+            font-family: 
+                "Hiragino Kaku Gothic ProN",
+                "Helvetica Neue",
+                Arial,
+                "Hiragino Sans",
+                Meiryo,
+                sans-serif;
+        }        
         .backgroundimage-red {
             background-image: url("{{ url_for('static', filename='img/red.png') }}");
         }
