--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <main>
-    <section class="box">
+    <!-- <section class="box">
         <div class="intr wrapper">
             <h1>沢山のページを<br>一つのサイトで管理できる</h1>
             <p>タブの管理に困っていませんか？<br>link keeper なら解決出来るかもしれません</p>
             <button class="button intr-button1">詳しく見る</button>
             <button class="button intr-button2">早速使ってみる</button>
         </div>
-    </section>
+    </section> -->
 </main>
 {% endblock %}
