--- a/templates/browse_folder.html
+++ b/templates/browse_folder.html
@@ -1,6 +1,10 @@
 {% extends "header.html" %}
 
 {% block content %}
+    <script>
+        var folderId = parseInt('{{ folder_id }}');
+        var folderName = "{{ folder_name }}";
+    </script>
     <main>
         <div class="folder_urls">
             <h1>{{ folder_name }}</h1>
@@ -11,13 +15,17 @@
                     <th class="{{ color }}">ドメイン名</th>
                 </tr>
                 {% for url in urls %}
-                <tr>
+                <tr class="urls_tr">
                     <td>{{ url.url_name }}</td>
                     <td class="url"><div class="url-content"><a href="{{ url }}" target="_blank" rel="noopener noreferrer">{{ url }}</a></div></td>
                     <td class="domain"><a href="http://{{ url.domain }}" target="_blank" rel="noopener noreferrer">{{ url.domain }}</a></td>
+                    <td class="after" data-url-id="{{ url.url_id }}"></td>
                 </tr>
                 {% endfor %}
             </table>
+        </div>
+        <div class="delete_url">
+            <h1 id="delete_url_class">urlを削除しますか？</h1>
         </div>
     </main>
 {% endblock %}
