--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -31,13 +31,10 @@
                 <a href="{{ url_for('create_folder') }}">フォルダを作成</a>
             </li>
             <li>
-                <a href="{{ url_for('add_url') }}">URLをフォルダに保存</a>
+                <a href="{{ url_for('add_url') }}">URLを保存</a>
             </li>
             <li>
                 <a href="{{ url_for('delete_folder') }}">フォルダを削除</a>
-            </li>
-            <li>
-                <a href="{{ url_for('delete_url') }}">フォルダ内のURLを削除</a>
             </li>
         </ul>
     </div>
@@ -46,7 +43,7 @@
         <h2>全てのフォルダ</h2>
         <div class="folder-box-div">
             {% for folder in folders %}
-            <a href="{{ url_for('another_folder', folder_id=folder.folder_id, folder_name=folder.folder_name) }}">
+            <a href="{{ url_for('folder', folder_id=folder.folder_id, folder_name=folder.folder_name) }}">
                 <div class="folder-litter {{ folder.folder_color.color }}">
                     <div class="folder-title"><p>{{ folder.folder_name | safe}}</p></div>
                         <div class="folder-litter-div">
