--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -42,6 +42,15 @@
     <section class="folder-box">
         <h2>全てのフォルダ</h2>
         <div class="folder-box-div">
+            <a href="{{ url_for('allurl') }}">
+                <div class="folder-litter gray">
+                    <div class="folder-title"><p>all urls</p></div>
+                        <div class="folder-litter-div">
+                            <img src="{{ url_for('static', filename='img/link.svg')}}">
+                            <a class="folder-litter-div-a">{{ url_count }}</a>
+                        </div>
+                </div>    
+            </a>
             {% for folder in folders %}
             <a href="{{ url_for('folder', folder_id=folder.folder_id, folder_name=folder.folder_name) }}">
                 <div class="folder-litter {{ folder.folder_color.color }}">
