--- a/templates/views_folder.html
+++ b/templates/views_folder.html
@@ -19,7 +19,7 @@
                 </tr>
                 {% for url in urls %}
                 <tr class="urls_tr">
-                    <td>{{ url.url_name }}</td>
+                    <td class="name">{{ url.url_name }}</td>
                     <td class="url"><div class="url-content"><a href="{{ url }}" target="_blank" rel="noopener noreferrer">{{ url }}</a></div></td>
                     <td class="domain"><div class="url-content"><a href="http://{{ url.domain }}" target="_blank" rel="noopener noreferrer">{{ url.domain }}</a></div></td>
                     <td class="after" data-url-id="{{ url.url_id }}"></td>
