--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,6 +471,10 @@ select {
     max-width: 0.1em;
     overflow: hidden;
 }
+.name {
+    color: #393939;
+    font-weight: bolder;
+}
 .domain {
     width: 15%;
     max-width: 0.1em;
