--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -30,10 +30,10 @@
             <li class="create-folder-href">
                 <a href="{{ url_for('create_folder') }}">フォルダを作成</a>
             </li>
-            <li>
+            <li class="add-url-href">               
                 <a href="{{ url_for('add_url') }}">URLを保存</a>
             </li>
-            <li>
+            <li class="delete-folder-href">
                 <a href="{{ url_for('delete_folder') }}">フォルダを削除</a>
             </li>
         </ul>
