Update view all urls
<br>を空白に変換するように変更

--- a/templates/add_url-to_folder.html
+++ b/templates/add_url-to_folder.html
@@ -44,7 +44,7 @@
                         <li>
                             <select name="folder">
                             {% for folder in folders %}
-                                <option value="{{ folder.folder_id }}">{{ folder.folder_name }}</option>
+                                <option value="{{ folder.folder_id }}">{{ (folder.folder_name or 'No Folder') | replace('<br>', ' ') }}</option>
                             {% endfor %}
                             </select>
                         </li>
