--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -11,9 +11,6 @@
         </div>
     </div>
 -->
-<script>
-    fadeInOut(".toolbar-button", ".create-menu");
-</script>
 
 <main class="user-main">
     <div class="toolbar">
@@ -28,7 +25,7 @@
     <div class="create-menu">
         <ul>
             <li class="create-folder-href">
-                <a href="{{ url_for('create_folder') }}">フォルダを作成</a>
+                <a>フォルダを作成</a>
             </li>
             <li class="add-url-href">               
                 <a href="{{ url_for('add_url') }}">URLを保存</a>
@@ -58,12 +55,42 @@
                         <div class="folder-litter-div">
                             <img src="{{ url_for('static', filename='img/link.svg')}}">
                             <a class="folder-litter-div-a">{{ folder.urls.all()|length }}</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>                        
                         </div>
                 </div>    
             </a>
             {% endfor %}
         </div>
     </section>
+
+    <div id="create-folder-popup" class="signin-page popup wrapper" style="display: none;">
+        <img src="{{ url_for('static', filename='img/icon.svg') }}">
+        <div class="border"></div>
+        <div class="signin-page-form">
+            <h2>フォルダを作成</h2>
+            <form method="post" action="{{ url_for('create_folder') }}">
+                <ul>
+                    <li><input id="create-folder-name" type=text name=title placeholder="Title" class="text"></li>
+                    <li>
+                        <select id="crate-folder-color" name="color">
+                            <option value="1">Red</option>
+                            <option value="2">Yellow</option>
+                            <option value="3">Blue</option>
+                            <option value="4">Green</option>
+                            <option value="5">Gray</option>
+                        </select>
+                    </li>
+                </ul>
+                <div class="signin-button-div">
+                    <input type="submit" value="Create" class="button">
+                    <div class="button close-popup">Close</div>
+                </div>
+            </form>
+        </div>
+    </div>
 
 </main>
 
