--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -24,14 +24,14 @@
 
     <div class="create-menu">
         <ul>
-            <li class="create-folder-href">
+            <li class="menu-click create-folder-href">
                 <a>フォルダを作成</a>
             </li>
-            <li class="add-url-href">               
-                <a href="{{ url_for('add_url') }}">URLを保存</a>
+            <li class="menu-click add-url-href">               
+                <a>URLを保存</a>
             </li>
-            <li class="delete-folder-href">
-                <a href="{{ url_for('delete_folder') }}">フォルダを削除</a>
+            <li class="menu-click delete-folder-href">
+                <a>フォルダを削除</a>
             </li>
         </ul>
     </div>
@@ -66,31 +66,9 @@
         </div>
     </section>
 
-    <div id="create-folder-popup" class="signin-page popup wrapper" style="display: none;">
-        <img src="{{ url_for('static', filename='img/icon.svg') }}">
-        <div class="border"></div>
-        <div class="signin-page-form">
-            <h2>フォルダを作成</h2>
-            <form method="post" action="{{ url_for('create_folder') }}">
-                <ul>
-                    <li><input id="create-folder-name" type=text name=title placeholder="Title" class="text"></li>
-                    <li>
-                        <select id="crate-folder-color" name="color">
-                            <option value="1">Red</option>
-                            <option value="2">Yellow</option>
-                            <option value="3">Blue</option>
-                            <option value="4">Green</option>
-                            <option value="5">Gray</option>
-                        </select>
-                    </li>
-                </ul>
-                <div class="signin-button-div">
-                    <input type="submit" value="Create" class="button">
-                    <div class="button close-popup">Close</div>
-                </div>
-            </form>
-        </div>
-    </div>
+    {% include "popup/create_folder.html" %}
+    {% include "popup/add_url.html" %}
+
 
 </main>
 
